--- a/configs/nginx/nginx.conf
+++ b/configs/nginx/nginx.conf
@@ -36,6 +36,12 @@ http {
     proxy_cache_path /var/cache/mix/nginx levels=1:2 keys_zone=MIX_CACHE:100m inactive=24h use_temp_path=off;
     proxy_temp_path /var/cache/mix/nginx/temp;
 
+    # Internal location for cache purging
+    location = /purge-internal {
+        internal;
+        proxy_cache_purge MIX_CACHE $arg_key;
+    }
+
     # Default server (catch-all)
     server {
         listen 80 default_server;
